Add server status check and indicator to UI: implement API ping endpoint, update HTML for status display, and enhance CSS for server status styling.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
             <button class="btn" onclick="startGame()">Start Game</button>
             <button class="btn btn-secondary" onclick="showScreen('statsScreen')">View Player Stats</button>
+
+            <div id="serverStatus" class="server-status-indicator">
+                <span class="status-dot"></span>
+                <span class="status-text">Checking server connection...</span>
+            </div>
         </div>
     </div>
 
